# silly-visualizer

./: .gitignore  Cargo.toml  build.rs  clippy.toml
docs/: README.md
docs/architecture/: README.md  audio-pipeline.md  render-pipeline.md  shader-controls.md
docs/planning/: 2026-03-03-evolutionary-scenes-design.md  2026-03-03-music-visualizer-implementation.md  README.md
docs/plans/: 2026-03-03-evolutionary-scenes-implementation.md  2026-03-03-music-visualizer-design.md
docs/reference/: README.md  keyboard-shortcuts.md  visual-debugging.md
src/: analysis.rs  app.rs  audio.rs  audio_processing.rs  device_picker.rs  genome.rs  lineage.rs  main.rs  persistence.rs  presets.rs  renderer.rs  replay.rs  scene.rs  sck_audio.rs  uniforms.rs
src/shaders/: visualizer.wgsl
